--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@
 
 
 .app {
+  min-height: 100vh;
+  width: 100vw;
+  padding: 0; margin: 0;
+}
+.app1{
   text-align: center;
   display: grid;
   justify-items: center;
