--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,12 @@
   background: rgba(165, 165, 165, 0.75);
 }
 
-
+.td {
+  border: solid 1px black;
+  padding: 5px;
+  width: 500px;
+  font-size: 18px;
+}
 .app {
   min-height: 100vh;
   width: 100vw;
